<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">                      
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.comsysto.android</groupId>
	<artifactId>serverone</artifactId>
	<packaging>war</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>Server One</name>
	<parent>
		<groupId>com.comsysto.android</groupId>
		<artifactId>android-parent</artifactId>
		<version>1.0-SNAPSHOT</version>
	</parent>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>hibernate3-maven-plugin</artifactId>
				<!-- >version>2.0-alpha-2</version -->
				<configuration>
					<executions>
						<execution>
							<phase>process-classes</phase>
							<goals>
								<goal>hbm2ddl</goal>
							</goals>
						</execution>
					</executions>
					<components>
						<component>
							<name>hbm2ddl</name>
							<implementation>annotationconfiguration</implementation>
							<outputDirectory>target/hibernate3/sql</outputDirectory>
						</component>
					</components>
					<componentProperties>
						<drop>true</drop>
						<configurationfile>/src/test/resources/hibernate.cfg.xml</configurationfile>
						<outputfilename>schema.sql</outputfilename>
						<format>format</format>
					</componentProperties>
				</configuration>
			</plugin>
			<plugin>	
        		<artifactId>maven-war-plugin</artifactId>
        		<!-- 
        		<configuration>
          			<attachClasses>true</attachClasses>
        		</configuration>
        		 -->
      		</plugin>
      		<plugin>
      			<groupId>org.apache.maven.plugins</groupId>
      			<artifactId>maven-eclipse-plugin</artifactId>
      			<configuration>
      				<wtpversion>2.0</wtpversion>
      			</configuration>
      		</plugin>		
			<!--
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<executions>
					<execution>
						<id>Instrument domain classes</id>
						<configuration>
							<tasks>
								<taskdef name="instrument"
									classname="org.hibernate.tool.instrument.cglib.InstrumentTask">
									<classpath>
										<path refid="maven.dependency.classpath" />
										<path refid="maven.plugin.classpath" />
									</classpath>
								</taskdef>
								<instrument verbose="true">
									<fileset dir="${project.build.outputDirectory}">
										<include name="**/model/*.class" />
									</fileset>
								</instrument>
							</tasks>
						</configuration>
						<phase>process-classes</phase>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>org.hibernate</groupId>
						<artifactId>hibernate</artifactId>
						<version>3.2.0.ga</version>
					</dependency>
				</dependencies>
			</plugin>
			-->
		</plugins>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-webdav</artifactId>
				<version>1.0-beta-2</version>
			</extension>
			<extension>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>5.0.8</version>
			</extension>			
			<!--  
			<extension>
				<groupId>hsqldb</groupId>
				<artifactId>hsqldb</artifactId>
				<version>1.8.0.1</version>
			</extension>
			-->
		</extensions>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<testFailureIgnore>false</testFailureIgnore>
					<argLine>-Xms256m -Xmx512m -XX:PermSize=512m -XX:MaxPermSize=512m</argLine>
				</configuration>
			</plugin>
			<!-- >plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.0</version>
				</plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<minmemory>128m</minmemory>
					<maxmemory>512</maxmemory>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
	<dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <scope>test</scope>
        </dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-annotations</artifactId>
			<scope>compile</scope>
		</dependency>					
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<scope>compile</scope>			
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<scope>compile</scope>			
		</dependency>				
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
      		<groupId>org.jasypt</groupId>
      		<artifactId>jasypt</artifactId>
      		<scope>compile</scope>
  		</dependency>
		<dependency>
			<groupId>hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>		
	</dependencies>
	<developers>
		<developer>
			<id>1</id>
			<name>Daniel Bartl</name>
			<email>d.bartl@comsysto.com</email>
			<organization>comsysto GmbH</organization>
		</developer>
		<developer>
			<id>2</id>
			<name>Mo ElBatya</name>
			<organization>comsysto GmbH</organization>
		</developer>
		<developer>
			<id>3</id>
			<name>Stefan Djurasic</name>
			<organization>comsysto GmbH</organization>
		</developer>
		<developer>
			<id>4</id>
			<name>Damir Abdic</name>
			<organization>comsysto GmbH</organization>
		</developer>		
	</developers>
</project>
